@@ -5,7 +5,7 @@ import ca.uhn.fhir.jpa.api.dao.DaoRegistry;
 import ca.uhn.fhir.jpa.api.dao.IFhirResourceDao;
 import ca.uhn.fhir.jpa.subscription.channel.subscription.IChannelNamer;
 import ca.uhn.fhir.jpa.subscription.match.registry.SubscriptionLoader;
-import ca.uhn.fhir.jpa.topic.SubscriptionTopicLoader;
+import ca.uhn.fhir.jpa.topic.ISubscriptionTopicLoader;
 import ca.uhn.fhir.mdm.api.IMdmSettings;
 import ca.uhn.fhir.mdm.rules.json.MdmRulesJson;
 import ca.uhn.fhir.rest.api.server.RequestDetails;
@@ -22,13 +22,12 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
@@ -51,24 +50,24 @@ class MdmSubscriptionLoaderR5Test {
     @Mock
     SubscriptionLoader mySubscriptionLoader;
     @Mock
-    SubscriptionTopicLoader mySubscriptionTopicLoader;
+	ISubscriptionTopicLoader mySubscriptionTopicLoader;
     @InjectMocks
     MdmSubscriptionLoader mySvc = new MdmSubscriptionLoader();
 
     @AfterEach
-    public void after() {
+	void after() {
         verifyNoMoreInteractions(mySubscriptionTopicDao);
     }
 
 	@Test
-	public void testDaoUpdateMdmSubscriptions_withR5FhirContext_createsCorrectSubscriptions() {
+	void testDaoUpdateMdmSubscriptions_withR5FhirContext_createsCorrectSubscriptions() {
 		// setup
 		MdmRulesJson mdmRulesJson = new MdmRulesJson();
-		mdmRulesJson.setMdmTypes(Arrays.asList("Patient"));
+		mdmRulesJson.setMdmTypes(List.of("Patient"));
 		when(myMdmSettings.getMdmRules()).thenReturn(mdmRulesJson);
 		when(myChannelNamer.getChannelName(any(), any())).thenReturn("Test");
-		when(myDaoRegistry.getResourceDao(eq("Subscription"))).thenReturn(mySubscriptionDao);
-        when(myDaoRegistry.getResourceDao(eq("SubscriptionTopic"))).thenReturn(mySubscriptionTopicDao);
+		when(myDaoRegistry.getResourceDao("Subscription")).thenReturn(mySubscriptionDao);
+        when(myDaoRegistry.getResourceDao("SubscriptionTopic")).thenReturn(mySubscriptionTopicDao);
 		when(mySubscriptionDao.read(any(), any(RequestDetails.class))).thenThrow(new ResourceGoneException(""));
 
 		// execute
